<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#227e7e"
    android:layout_weight="1"
    android:layoutDirection="rtl"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#22caca"
        android:id="@+id/header1"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/header_container"
        android:background="#22caca"

        android:layout_gravity="center_horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:text="TextView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
</LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#227e7e"
        android:orientation="vertical" >
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_layout"
        android:visibility="gone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#22caca"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/choose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/green_button">
            </ImageView>

            <TextView
                android:id="@+id/myImageViewText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/imageView9"
                android:layout_alignRight="@+id/imageView9"
                android:layout_centerVertical="true"
                android:layout_margin="1dp"
                android:gravity="center"
                android:text="@string/Choose"
                android:textColor="#394e64"
                android:textSize="10dp"
                android:layout_gravity="center" />
        </RelativeLayout>

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="7dp"

            android:ems="10"
            android:paddingRight="4dp"
            android:textDirection="rtl"
            android:background="@drawable/edittext_style"
            android:layout_weight="1.4"
            android:layout_margin="10dp"
            android:paddingLeft="4dp"
            android:hint="@string/EntertheFood"
            android:textSize="15dp"
            android:layout_gravity="center_vertical">

        </AutoCompleteTextView>
        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_search_category_default"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:background="#22caca"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >


            <TextView
                android:id="@+id/unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="TextView"
                android:layout_marginRight="30dp"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:layout_weight="2"
                android:ems="10"
                android:paddingRight="4dp"
                android:textDirection="rtl"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/TextView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/Quantity"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="right"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/caloriev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Small Text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/TextView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Calorie"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/carbohydratev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="17dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/TextView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Carbohydrate"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/fat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Small Text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/TextView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Fat"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/proteinv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_weight="1"
                    android:text="Small Text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/TextView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Protein"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12dp"
                    android:layout_marginRight="10dp" />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1" >

            <RelativeLayout
                android:id="@+id/dont_write"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/white_button"
                    android:text="@string/Quantity" />

                <TextView
                    android:id="@+id/myImageViewText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/imageView8"
                    android:layout_alignRight="@+id/imageView8"
                    android:layout_centerVertical="true"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/Dont_Write_Down"
                    android:textColor="#394e64"
                    android:textSize="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/write"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.4" >

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/green_button" />

                <TextView
                    android:id="@+id/myImageViewText2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/imageView7"
                    android:layout_alignRight="@+id/imageView7"
                    android:layout_centerVertical="true"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/Write_Down"
                    android:textColor="#394e64"
                    android:textSize="10dp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>