<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/grey_5"
    tools:context="com.example.diabetes.name.yadaavar">

    <include
        android:id="@+id/yadavvarappbar"
        layout="@layout/toolbar">

    </include>

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/yadavvarappbar"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <android.support.v7.widget.CardView
                        android:id="@+id/cvdoctorvisit"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/cardview_"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp"

                            >

                            <ImageView
                                android:id="@+id/imgdoctorvisit"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:background="@drawable/doctor14" />

                            <TextView
                                android:id="@+id/txtdoctorvisit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="5dp"
                                android:textColor="#000000"
                                android:text="@string/doctorreminder"
                                android:textAppearance="?android:attr/textAppearanceSmall" />
                        </LinearLayout>

                    </android.support.v7.widget.CardView>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <android.support.v7.widget.CardView
                        android:id="@+id/cvghanreminder"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/cardview_"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp"

                            >

                            <ImageView
                                android:id="@+id/imgghandreminder"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:background="@drawable/diabete" />

                            <TextView
                                android:id="@+id/txtghandreminder"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="5dp"
                                android:textColor="#000000"
                                android:text="@string/ghandreminder"
                                android:textAppearance="?android:attr/textAppearanceSmall" />
                        </LinearLayout>

                    </android.support.v7.widget.CardView>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cvansolinreminder"

                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:id="@+id/imgansolinreminder"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:background="@drawable/ansolin" />

                            <TextView
                                android:id="@+id/txtansolinreminder"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="5dp"
                                android:text="@string/ansolinreminder"
                                android:textAppearance="?android:attr/textAppearanceSmall" />
                        </LinearLayout>

                    </android.support.v7.widget.CardView>


                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
